<resources>
    <string name="app_name">Advance Attendance System</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="add_face">Add Face</string>
    <string name="capture_face">Capture Face</string>
    <string name="capture_video">Capture Video</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="face_recognition_check">Face Recognition Check?</string>
    <string name="recognize_face">Recognize Face</string>

    <string name="email">Roll No:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User?</string>
    <string name="email_hint">Roll No</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="view_records">View Records</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="course">Course</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="attendance_records">Attendance Records</string>
    <string name="home">Home</string>
    <string name="courseHeading">Course</string>
    <string name="timeslotHeading">Time</string>
    <string name="dateHeading">Date</string>
</resources>