<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <ListView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/listview"-->
<!--        />-->

    <TextView
        android:id="@+id/recordsHeading"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingVertical="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/attendance_records"
        android:textSize="35sp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        />

    <TextView
        android:id="@+id/courseHeading"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recordsHeading"
        android:text="@string/courseHeading"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        />
    <TextView
        android:id="@+id/dateHeading"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/courseHeading"
        app:layout_constraintEnd_toStartOf="@id/timeslotHeading"
        app:layout_constraintTop_toBottomOf="@id/recordsHeading"
        android:text="@string/dateHeading"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        />
    <TextView
        android:id="@+id/timeslotHeading"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recordsHeading"
        android:text="@string/timeslotHeading"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        />

    <TextView
        android:id="@+id/recordsData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseHeading"
        android:text="@string/attendance_records"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingTop="20dp"
        />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <!--    <TableLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/recordsHeading"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:id="@+id/recordsTable"-->
<!--        >-->

<!--        <TableRow-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="30dp">-->

<!--            <TextView-->
<!--                android:text="@string/course"-->
<!--                android:textSize="20sp"-->
<!--                android:textAlignment="center"-->
<!--                android:layout_width="0dp"-->

<!--                android:layout_weight=".35"-->
<!--            />-->

<!--            <TextView-->
<!--                android:text="@string/date"-->
<!--                android:textSize="20sp"-->
<!--                android:textAlignment="center"-->
<!--                android:layout_width="0dp"-->

<!--                android:layout_weight=".35"-->
<!--                />-->

<!--            <TextView-->
<!--                android:text="@string/time"-->
<!--                android:textSize="20sp"-->
<!--                android:textAlignment="center"-->
<!--                android:layout_width="0dp"-->

<!--                android:layout_weight=".30"-->
<!--                />-->
<!--        </TableRow>-->



<!--    </TableLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>