<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_image"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/user_email_id_text"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="100dp"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:text="@string/email"-->
    <!--        android:textSize="20sp"-->

    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/student_logo"
        android:layout_width="225dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/student_logo_image" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email_id_textfield"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/email_hint"
        app:boxStrokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_logo">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_email_id_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_password_textfield"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:boxBackgroundColor="@color/white"
        android:hint="@string/password_hint"
        app:endIconMode="password_toggle"
        app:boxStrokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email_id_textfield">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_password_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.Icon"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_password_textfield" />

    <Button
        android:id="@+id/new_user_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/new_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>